<resources>
    <string name="app_name">My Notes</string>
    <string name="insert_button">Insert</string>
    <string name="edit_button">Edit</string>
    <string name="retrieve_button">Retrieve</string>
    <string name="hint_note_input">Note</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="edit_note_id_value">ID</string>
    <string name="edit_note_id_label">Note ID</string>
    <string name="display_content_label">Using Text</string>
    <string name="display_content_label_list">Using List</string>
</resources>