<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_above="@id/input_linear_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="3dp"
            android:textSize="13sp"
            android:text="@string/display_content_label"/>

        <TextView
            android:id="@+id/db_content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:paddingHorizontal="15dp"
            android:textSize="13sp"
            android:text="@string/display_content_label_list"/>

        <ListView
            android:id="@+id/db_content_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/input_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <!-- Display Content Options -->
        <CheckBox
            android:id="@+id/display_text_content_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/display_content_label"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/display_list_content_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/display_content_label_list"
            android:checked="true"/>

        <!-- Note Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="15dp"
            android:hint="@string/hint_note_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Operations -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp">

            <Button
                android:id="@+id/insert_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/button_right_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:text="@string/insert_button" />
            <Button
                android:id="@+id/edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_marginEnd="@dimen/button_right_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:text="@string/edit_button"/>
            <Button
                android:id="@+id/retrieve_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/retrieve_button" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>